[metadata]
name = pagerduty_exporter
version = 0.0.1
author = Murali Kanagala
author_email = muralikanagala@outlook.com
description = Prometheus exporter to collect Pagerduty metrics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/pagerduty_exporter
project_urls =
    Bug Tracker = https://github.com/pypa/pagerduty_exporter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src